# langgraph-ai-agents

./: AI_Agents.py  langgraph.json  pyproject.toml
.devcontainer/: devcontainer.json
agents/: code_assistant_agent.py  data_query_assistant_agent.py  financial_advisor_agent.py  financial_assistant_agent.py  graph_rag_agent.py  podcast_generator_agent.py  podcast_script_writer_agent.py  python_and_react_assistant_agent.py  reddit_search_agent.py  research_analyst_agent.py  simple_rag_agent.py
backend/: README.md  langgraph.json  pyproject.toml  requirements.txt
backend/agents/: code_assistant_agent.py  data_analysis.py  file_reader_agent.py  financial_advisor_agent.py
backend/data/: sample_data.json
backend/langgraph_agents/: code_assistant_agent.py  file_reader_agent.py  financial_advisor_agent.py  reddit_search_agent.py  research_analyst_agent.py  sql_generator_agent.py
backend/langgraph_agents/tools/code_assistant/: execute_python.py  render_react.py  send_file_to_user.py
backend/langgraph_agents/tools/financial_advisor/: prices.py  ticker_news.py
backend/notebooks/: 01_file_reader_agent.ipynb  file_reader_agent.ipynb  reddit_search_agent.ipynb  research_analyst_agent.ipynb
backend/tools/code_assistant/: install_npm_dependencies.py
backend/tools/financial_advisor/: last_quote.py  line_items.py
common/: agent.py  chat.py  page.py  pages_ui.py  tools.py
common/react/src/: App.js
frontend/: AI_Agents.py  README.md  package-lock.json  package.json
frontend/assistant_ui/: package-lock.json
frontend/pages/: Code_Assistant.py  Financial_Advisor.py  Reddit_Search.py  Research_Analyst.py  SQL_Generator.py
frontend/react/: package.json
frontend/react/src/: App.js
frontend/src/: App.js
frontend/streamlit/: AI_Agents_For_Data.py
frontend/streamlit/pages/: File_Reader.py
frontend/streamlit_ui/: AI_Agents.py  AI_Agents_For_Data.py  README.md  pyproject.toml
frontend/streamlit_ui/pages/: Code_Assistant.py  File_Reader.py  Financial_Advisor.py  Reddit_Search.py  Research_Analyst.py  SQL_Generator.py
frontend/streamlit_ui/src/: App.js
pages/: Code_Assistant.py  Data_Query_Assistant.py  Financial_Advisor.py  Financial_Assistant.py  Graph_RAG.py  Podcast_Generator.py  Podcast_Script_Writer.py  Python_And_React_Assistant.py  Reddit_Search.py  Research_Analyst.py  SQL_Generator.py  Simple_RAG.py
react/src/: App.js
tools/: graph_rag.py  reddit_search.py  simple_rag.py
tools/code_assistant/: execute_python.py  render_react.py  send_file_to_user.py
tools/financial_advisor/: line_items.py  prices.py  ticker_news.py
tools/financial_assistant/: last_quote.py  line_items.py  prices.py  web_search.py
tools/python_and_react_assistant/: execute_python.py  install_npm_dependencies.py  render_react.py  send_file_to_user.py
