[tool.poetry]
name = "langgraph-ai-agents"
version = "1.0"
description = "Langgraph AI agents"
authors = ["Rahul Bhatia <rahul.bhatia023@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
e2b-code-interpreter = "^0.0.10"
langchain-openai = "^0.2.1"
langgraph = "^0.2.31"
streamlit = "^1.38.0"
poetry-core = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"