[tool.poetry]
name = "langgraph-ai-agents"
version = "1.0"
description = "Langgraph AI agents"
authors = ["Rahul Bhatia <rahul.bhatia023@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
e2b-code-interpreter = "^0.0.10"
langchain-openai = "^0.2.1"
langgraph = "^0.2.28"
streamlit = "^1.38.0"
poetry-core = "^1.9.0"
black = "^24.8.0"
watchdog = "^5.0.3"
praw = "^7.7.1"
langchain-community = "^0.3.1"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"